--- a/buit_new/styles/globals.css
+++ b/buit_new/styles/globals.css
@@ -2,18 +2,63 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #A8A8A8;
+  background-color: white;
+  overflow-x: hidden;
+  font-family: 'Open-sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
   color: inherit;
+  cursor: pointer;
+  transition: all 200ms linear;
+}
+
+a:hover {
   text-decoration: none;
+}
+
+.link {
+  color: #c4c3ca;
+}
+
+.link:hover {
+  color: #ffeba7;
+}
+
+p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+h4 {
+  font-weight: 600;
+}
+
+h6 span {
+  padding: 0 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.section {
+  position: relative;
+  width: 100%;
+  display: block;
+}
+
+.full-height {
+  min-height: 100vh;
 }
 
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open-sans', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
