--- a/buit_new/styles/globals.css
+++ b/buit_new/styles/globals.css
@@ -2,13 +2,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-weight: 300;
+  /* font-weight: 300; */
   font-size: 15px;
   line-height: 1.7;
   color: #A8A8A8;
   background-color: white;
   overflow-x: hidden;
-  font-family: 'Open-sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -16,10 +16,16 @@ a {
   color: inherit;
   cursor: pointer;
   transition: all 200ms linear;
+  text-decoration: none;
 }
 
 a:hover {
   text-decoration: none;
+}
+
+input:focus {
+  outline: none;
+  border: 0px;
 }
 
 .link {
@@ -58,7 +64,7 @@ h6 span {
 
 * {
   box-sizing: border-box;
-  font-family: 'Open-sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
